--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1,3 +1,16 @@
 footer {
   margin-top: 15px;
 }
+
+.row-striped:nth-of-type(even) {
+  background: #f5f5f5;
+}
+
+.row-padding-3px {
+  padding: 3px;
+}
+
+.slider-container {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
